@@ -1,4 +1,5 @@
 0.4.0 - currently working on
+- [#1440] Feature: Add functions in the testing framework to create dummy content elements
 - [#1419] Feature: Add functions in the testing framework to create dummy FE pages and dummy system folders
 - [#1418] Change: testingframework::resetAutoIncrement and ::countRecords should allow every existing table
 - [#1328] Feature: Add the "is_dummy_record" field to the fe_users, pages  and tt_content tables
